# rag-search

./: .gitignore  README.md  pyproject.toml
app/: api.py  start_api.py  vectordb_rag.py
data/: Kawasaki Ninja 300 detailed description.docx
data/corrugator/: Corrugator.docx  Description of the Corrugator Challenge.docx
notebooks/: api.ipynb  create_vectordb_rag.ipynb  exploratory_analysis.ipynb  test_streamlit_interface.py
