[tool.poetry]
name = "rag-search"
version = "0.1.0"
description = "RAGSearch is an AI-powered document search system that uses RAG to find and generate precise answers from internal company files (TXT, PDF, DOCX, PPTX)"
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = { version = "^2.5.0", source = "pytorch" }
torchvision = {version = "^0.21.0+cu118", source = "pytorch"}
torchaudio = {version = "^2.6.0+cu118", source = "pytorch"}
ipykernel = "^6.29.5"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
openai = "^1.61.0"
transformers = "^4.48.2"
langchain = "^0.3.17"
langgraph = "^0.2.69"
qdrant-client = "^1.13.2"
pypdf2 = "^3.0.1"
tiktoken = "^0.8.0"
langchain-text-splitters = "^0.3.5"
langchain-community = "^0.3.16"
langchain-huggingface = "^0.1.2"
sentence-transformers = "^3.4.1"
langchain-qdrant = "^0.2.0"
gradio-client = "^1.7.0"
pydantic = "^2.10.6"
accelerate = "^1.3.0"
streamlit = "^1.41.1"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
